# linkedin

./: .gitignore  app.py  indeed.py  linkedin.py  main.py  poleEmploi.py  pyproject.toml  run.py  setup.py  test.py
linkedin/: __init__.py  application.py  main.py
test/: run.py
test/env/: pyvenv.cfg
test/env/Scripts/: activate  activate.bat
